  * Rework main binary such that /usr/bin/swipl is a shell script instead
      of a symlink (Closes: #456261)
  * Delete empty directories (spotted by lintian)
  * Tidy (unfixed) Lintian "image-file-in-usr-lib" overrides.
  * Update Standards-Version: to 3.7.3.
  * Require debhelper >= 5.
  * Add debian/watch.
  * Move from XS-Vcs-* to Vcs-*.
  * Add ${misc:Depends} for all binaries.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Sun, 09 Dec 2007 02:32:02 +0000

swi-prolog (5.6.47-1) unstable; urgency=low

  * New upstream version (Closes: #295209, #308325, #425580)
  * New maintainer (Closes: #422576)
  * Bump Debhelper compatibility to 5
  * debian/rules:
     * Update config.sub and config.guess from autotools-dev
         (Closes: #408076, #414181)
     * Desist from blindly ignoring "clean" target
  * debian/control:
     * Use ${binary:Version} instead of ${Source-Version}
     * Add new Homepage: field
     * Add XS-Vcs-* fields
  * Change ".menu" sections from
       "Apps/Programming" -> "Applications/Programming"
  * Documentation:
     * Remove some SGML documentation now missing from upstream
     * Add Sicstus and SWI-Prolog v4.8 -related XPCE documentation

 -- Chris Lamb <chris@chris-lamb.co.uk>  Sun, 02 Dec 2007 23:26:00 +0000

swi-prolog (5.6.14-1) unstable; urgency=low

  * The "OMG!" release
  * New Upstream Release (closes: #308325)
  * New Maintainer (closes: #296871)
  * Now Build from source (closes: #324053)
  * libreadline5-dev added as a buil-dependency (closes: #326293)
  * xlibs-dev dependency removed (closes: #347073)
  * .pwd file removed (closes:  #285894)

 -- Gerardo Curiel <gcuriel@debianvenezuela.org>  Sat, 10 Jun 2006 00:22:25 -0400

swi-prolog (5.2.13-1) unstable; urgency=low

  * New upstream (closes: #257254)
  * Fixed executable naming in man page (closes: #223815)
  * Added http and semweb packages

 -- Michael Piefel <piefel@debian.org>  Mon, 12 Jul 2004 14:55:07 +0200

swi-prolog (5.2.7-1) unstable; urgency=low
