@@ -1,5 +1,7 @@
 #!/usr/bin/make -f
 
+include /usr/share/dpatch/dpatch.make
+
 export DH_OPTIONS
 
 export PLARCH ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH)
@@ -10,15 +12,6 @@ ifeq ($(DEB_BUILD_GNU_TYPE), $(DEB_HOST_GNU_TYPE))
 else
   CONFFLAGS += --build $(DEB_BUILD_GNU_TYPE) --host $(DEB_HOST_GNU_TYPE)
 endif
-
-patch: patch-stamp
-patch-stamp:
-	dpatch apply-all
-
-unpatch:
-	
-	dpatch deapply-all
-	rm -rf debian/patched
 
 build: build-stamp
 build-stamp: patch
