@@ -11,6 +11,7 @@ swi-prolog (5.6.48-1) unstable; urgency=low
   * Add debian/watch.
   * Move from XS-Vcs-* to Vcs-*.
   * Add ${misc:Depends} for all binaries.
+  * Include dpatch.make instead of re-implementing patch/unpatch targets.
 
  -- Chris Lamb <chris@chris-lamb.co.uk>  Sun, 09 Dec 2007 02:32:02 +0000
 
